--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,12 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/xyrisos/xyris-build/xyris-build:3.2.0
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Install packages
+        run: sudo apt install rsync doxygen-latex 
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -21,6 +18,11 @@ jobs:
           submodules: true
       - name: Build Xyris Docs
         run: make docs
+      - name: 'Upload Artifact'
+          uses: actions/upload-artifact@v2
+          with:
+            name: os-image-debug
+            path: docs/build/
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
