Update APT before installing pkgs
See actions/virtual-environments #675

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Update packages
+        run: sudo apt update
       - name: Install packages
         run: sudo apt install rsync doxygen-latex graphviz
       - name: Checkout
